syntax = "proto3";

option csharp_namespace = "PetFinder.Backend.Grpc";

package greet;

import "google/protobuf/wrappers.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetPets(PageRequest) returns (stream .greet.PetResponse);
}

message PageRequest {
	int32 page = 1;
	int32 pageSize = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message PetResponse {
	UUID Id = 1;
	PetType Type = 2;
	google.protobuf.StringValue Name = 3;
	google.protobuf.UInt32Value Age = 4;
	NullableBool Sterilized = 5;
	repeated string Vaccination = 6;
	repeated string Diseases = 7;
}

message UUID {
	string value = 1;
}

enum PetType {
	Cat = 0;
	Dog = 1;
}

message NullableBool {
	bool NullValue = 1;
	bool Value = 2;
}